--- a/JSProjectTests/html/Tests.html
+++ b/JSProjectTests/html/Tests.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="app.css" type="text/css" />
 
 </head>
@@ -14,7 +13,7 @@
         <span>If this section doesn't update, check your console for errors!</span>
     </div>
 
-    <script src="../lib/jsProject.js"></script>
+    <script src="../../JSProject/dist/jsProject.js"></script>
     <script src="../js/tsUnit.js"></script>
     <script src="../js/smartObject/SmartObjectBasicTests.js"></script>
 </body>
