SmartObject fixes + UnitTests for SmartObject

--- a/JSProjectTests/html/Tests.html
+++ b/JSProjectTests/html/Tests.html
@@ -15,6 +15,10 @@
 
     <script src="../../JSProject/dist/jsProject.js"></script>
     <script src="../js/tsUnit.js"></script>
+    <script src="../js/Main.js"></script>
+
+    <!-- Tests -->
+    <script src="../js/smartObject/TestObjectFactory.js"></script>
     <script src="../js/smartObject/SmartObjectBasicTests.js"></script>
 </body>
 </html>
