--- a/JSProjectTests/html/Tests.html
+++ b/JSProjectTests/html/Tests.html
@@ -13,12 +13,15 @@
         <span>If this section doesn't update, check your console for errors!</span>
     </div>
 
-    <script src="../../JSProject/dist/jsProject.js"></script>
-    <script src="../js/tsUnit.js"></script>
-    <script src="../js/Main.js"></script>
+    <!--<script src="../../JSProject/dist/jsProject.js"></script>-->
+    <script src="../../JSProjectECMA6/dist/jsProject6.js"></script>
+    <!-- <script src="../js/tsUnit.js"></script>
+    <script src="../js/Main.js"></script> -->
 
-    <!-- Tests -->
+    <!-- Tests 
     <script src="../js/smartObject/TestObjectFactory.js"></script>
-    <script src="../js/smartObject/SmartObjectBasicTests.js"></script>
+    <script src="../js/smartObject/SmartObjectBasicTests.js"></script>-->
+    <script src="../js/rpc/TestObjectFactory.js"></script>
+    <script src="../js/rpc/RpcTests.js"></script>
 </body>
 </html>
