--- a/JSProjectTests/html/Tests.html
+++ b/JSProjectTests/html/Tests.html
@@ -15,8 +15,8 @@
 
     <!--<script src="../../JSProject/dist/jsProject.js"></script>-->
     <script src="../../JSProjectECMA6/dist/jsProject6.js"></script>
-    <!-- <script src="../js/tsUnit.js"></script>
-    <script src="../js/Main.js"></script> -->
+    <!-- <script src="../js/tsUnit.js"></script> -->
+    <script src="../js/Main.js"></script>
 
     <!-- Tests 
     <script src="../js/smartObject/TestObjectFactory.js"></script>
