--- a/JSProjectTests/html/ES6 Performance.html
+++ b/JSProjectTests/html/ES6 Performance.html
@@ -9,7 +9,7 @@
 <body>
 
 
-    <!--<script src="../../JSProject/dist/jsProject.js"></script>-->
+    <script src="../../JSProjectECMA6/dist/jsProject6.js"></script>
     
     <!-- <script src="../js/tsUnit.js"></script> -->
     <script src="es6 performance.js"></script>
