fun with promises

--- a/JSProjectTests/html/ES6 Performance.html
+++ b/JSProjectTests/html/ES6 Performance.html
@@ -12,7 +12,7 @@
     <script src="../../JSProjectECMA6/dist/jsProject6.js"></script>
     
     <!-- <script src="../js/tsUnit.js"></script> -->
-    <script src="es6 performance.js"></script>
+    <script src="es6_performance.js"></script>
 
 
 </body>
