lots of changes +code formating

--- a/HsLogic/test/test.html
+++ b/HsLogic/test/test.html
@@ -3,7 +3,7 @@
 	    <meta charset="utf-8" />
 		
 		<script src="../../JSProjectECMA6/dist/jsProject6.js"></script>
-		<script src="../dist/GameLogic.js"></script>
+		<script src="../dist/HsLogic.js"></script>
 	</head>
 	<body>
 	</body>
