cleanups, tests && more WIP

--- a/HsLogic/test/test.html
+++ b/HsLogic/test/test.html
@@ -6,5 +6,6 @@
 		<script src="../dist/HsLogic.js"></script>
 	</head>
 	<body>
+		<button type="button" onClick="HSLogic.d.draw();">Draw card!</button>
 	</body>
 </html>
