--- a/HsLogic/test/test.html
+++ b/HsLogic/test/test.html
@@ -7,5 +7,7 @@
 	</head>
 	<body>
 		<button type="button" onClick="HSLogic.d.draw();">Draw card!</button>
+		<button type="button" onClick="HSLogic.d.discard();">Discard!</button>
+		<button type="button" onClick="HSLogic.d.pickAtRandom();">Pick At Random!</button>
 	</body>
 </html>
