--- a/HsTests/html/Tests.html
+++ b/HsTests/html/Tests.html
@@ -14,6 +14,6 @@
     <script src="../../HsLogic/dist/HsLogic.js"></script>
     <script src="../../HsCardSets/dist/HsCardSets.js"></script>
     <!-- Tests -->
-    <script src="../dist/jsTests.js"></script>
+    <script src="../dist/HsTests.js"></script>
 </body>
 </html>
