--- a/HsTests/html/Tests.html
+++ b/HsTests/html/Tests.html
@@ -8,9 +8,12 @@
     <link rel="stylesheet" href="app.css" type="text/css" />
 </head>
 <body>
-    <script src="../../HsLogic/dist/HsLogic.js"></script>
+	<div id='results'></div>
+
+	<script src="../../HsLogic/dist/HsLogic.js"></script>
     <script src="../../HsCardSets/dist/HsCardSets.js"></script>
     <!-- Tests -->
     <script src="../dist/HsTests.js"></script>
+
 </body>
 </html>
